делает header и main в desktop

--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,11 +1,16 @@
 .btn {
   display: inline-flex;
-  padding: 10px 20px;
-
+  justify-content: center;
+  padding: 10px 15px;
+  text-transform: uppercase;
   color: $color-default-white;
-
-  background-color: $color-neon-blue;
-  border: none;
+  font-family: $ff-main;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  border-radius: 3px;
+  background-color: $color-transparent;
+  border: 1px solid $color-default-white;
   cursor: pointer;
 
   transition: opacity $trans-default;
@@ -23,4 +28,27 @@
   @include hover-focus {
     opacity: 0.8;
   }
+}
+
+.btn--to-form {
+  background-color: $color-neon-blue;
+  border: none;
+  font-size: 18px;
+  line-height: 21px;
+  padding: 15px 25px;
+}
+
+.btn--detailed {
+  border-color: $color-neon-blue;
+  color: $color-neon-blue;
+  width: 180px;
+  margin-top: 30px;
+}
+
+.btn--question {
+  background-color: $color-default-black;
+  width: 265px;
+  margin-right: 50px;
+  border: none;
+  padding: 15px 25px;
 }
