--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,8 +1,8 @@
 .container {
   width: 100%;
-  max-width: 1920px;
+  max-width: 1220px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 30px 0 35px;
 
   @include vp-1439 {
     padding: 0 32px;
