--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,12 @@
 
 @import "blocks/btn";
 @import "blocks/modal";
+@import "blocks/header";
+@import "blocks/intro";
+@import "blocks/advantages";
+@import "blocks/about";
+@import "blocks/products";
+@import "blocks/feedback";
 
 // ---------------------------------
 
