--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,19 +3,20 @@
 
 // Default
 
-$color-default-black:               #000000;
-$color-default-white:               #ffffff;
+$color-default-black:               #041827;
+$color-default-white:               #f2f5f6;
 $color-transparent:                 rgba(255, 255, 255, 0);
+$color-default-background:            #f8fdff;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-neon-blue:                   #2c39f2;
+$color-neon-blue:                   #00b2ff;
 $color-torch-red:                   #ff1553;
 
 // Gradient
 
-$black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+$black-to-bottom:                      linear-gradient( to bottom, $color-default-black 85%, rgba(4, 24, 39, 0) 100%);
 
 // Typography
 // ---------------------------------
@@ -26,7 +27,8 @@ $fz-default:                        16px;
 // у некоторых шрифтов в ios возникают проблемы с символом рубля
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
-
+$ff-main:                           "Roboto Condensed", "Arial", sans-serif;
+$ff-secondary:                      "PT Mono", "Arial", sans-serif;
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
 
 // Animation
