--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -3,7 +3,17 @@
 }
 
 .container__products {
-  padding: 70px 0 140px;
+  padding: 70px 20px 140px;
+  margin: 0 auto;
+  max-width: 1260px;
+
+  @include vp-767 {
+    padding: 60px 50px 75px;
+  }
+
+  @include vp-374 {
+  padding: 50px 25px 85px;
+  }
 }
 
 .products__title {
@@ -14,24 +24,50 @@
   line-height: 50px;
   margin: 0;
   margin-bottom: 50px;
+
+  @include vp-374 {
+    display: none;
+  }
+
+  &--mobile {
+    display: none;
+
+  @include vp-374 {
+    display: block;
+    color: $color-default-white;
+    font-family: $ff-main;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 39px;
+    margin: 0;
+    margin-bottom: 40px;
+  }
+  }
 }
 
 .products__list {
   margin: 0;
   padding: 0;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   justify-content: space-between;
+  grid-column-gap: 85px;
+  grid-row-gap: 30px;
+
+  @include vp-767 {
+    grid-template-columns: 1fr;
+  }
 }
 
 .products__link {
   display: block;
   position: relative;
   box-sizing: border-box;
-  width: 350px;
-  min-height: 650px;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 50px 80px 0 40px;
+  background-size: cover;
+  padding: 50px 0 545px 40px;
+  cursor: pointer;
 
   &::before {
     content: "";
@@ -46,18 +82,50 @@
     background-repeat: no-repeat;
     border-radius: 3px 0 0 0;
     background-size: 7px auto;
+
+    @include vp-374 {
+      width: 40px;
+      height: 40px;
+    }
   }
 
   &--production {
     background-image: url("../../img/cart-1-bg-desktop.png");
+    @include vp-767 {
+      background-image: url("../../img/cart-1-tablet.png");
+    }
+    @include vp-374 {
+      background-image: url("../../img/cart-1-mobile.png");
+    }
   }
 
   &--montage {
     background-image: url("../../img/cart-2-bg-desktop.png");
+    @include vp-767 {
+      background-image: url("../../img/cart-2-tablet.png");
+    }
+    @include vp-374 {
+      background-image: url("../../img/cart-2-mobile.png");
+    }
   }
 
   &--components {
     background-image: url("../../img/cart-3-bg-desktop.png");
+    @include vp-767 {
+      background-image: url("../../img/cart-3-tablet.png");
+    }
+    @include vp-374 {
+      background-image: url("../../img/cart-3-mobile.png");
+    }
+  }
+
+  @include vp-767 {
+    padding: 40px 0 155px 45px;
+    width: 100%;
+  }
+  @include vp-374 {
+    padding: 30px;
+    min-height: 250px;
   }
 }
 
