--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/about";
 @import "blocks/products";
 @import "blocks/feedback";
+@import "blocks/footer"
 
 // ---------------------------------
 
