--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -3,25 +3,55 @@
 }
 
 .container__advantages {
-  max-width: 1220px;
-  padding: 120px 0;
+  max-width: 1260px;
+  padding: 120px 20px;
+
+  @include vp-767 {
+    padding: 80px 50px;
+  }
+
+  @include vp-374 {
+    padding: 50px 25px;
+  }
 }
 
 .advantages__list {
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(2, 595px);
+  grid-template-columns: repeat(2, 1fr);
   gap: 30px;
+
+  @include vp-767 {
+    grid-template-columns: repeat(2, 320px);
+  }
+  @include vp-374 {
+    grid-template-columns: 1fr;
+  }
 }
 
 .advantages__item {
   list-style-type: none;
   border: 1px solid #ebebeb;
   border-left: 5px solid $color-neon-blue;
-  padding: 95px 40px 0;
+  padding: 40px 40px 0;
   min-height: 300px;
   box-sizing: border-box;
+  cursor: pointer;
+
+  @include vp-767 {
+    padding: 40px 40px 35px;
+  }
+
+  @include vp-374 {
+    min-height: 325px;
+    padding: 30px;
+  }
+}
+
+.advantages__icon {
+  margin-bottom: 20px;
+  fill: $color-neon-blue;
 }
 
 .advantages__title {
@@ -32,6 +62,11 @@
   margin: 0;
   margin-bottom: 15px;
   font-weight: 400;
+
+  @include vp-374 {
+    font-size: 20px;
+    line-height: 28px;
+  }
 }
 
 .advantages__description {
@@ -41,4 +76,21 @@
   line-height: 21px;
   margin: 0;
   font-weight: 400;
+  @include vp-374 {
+    font-size: 14px;
+    line-height: 19px;
+  }
+}
+
+.advantages__item--selected {
+  background-color: $color-neon-blue;
+}
+
+.advantages__item--selected .advantages__title,
+.advantages__item--selected .advantages__description {
+  color: $color-default-white;
+}
+
+.advantages__item--selected .advantages__icon {
+  fill: $color-default-white;
 }
