--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,6 +1,4 @@
 .btn {
-  display: inline-flex;
-  justify-content: center;
   padding: 10px 15px;
   text-transform: uppercase;
   color: $color-default-white;
@@ -30,25 +28,71 @@
   }
 }
 
+.btn--popup {
+  @include vp-767 {
+    display: none;
+  }
+}
+
+.btn__title--mobile {
+  display: none;
+  @include vp-374 {
+    display: inline-block;
+  }
+}
+
+.btn__title {
+  @include vp-374 {
+    display: none;
+  }
+}
+
 .btn--to-form {
   background-color: $color-neon-blue;
   border: none;
   font-size: 18px;
+  letter-spacing: 0.05em;
   line-height: 21px;
-  padding: 15px 25px;
+  padding: 15px 0;
+  max-width: 410px;
+  width: 100%;
+
+  @include vp-767 {
+    margin-left: 40px;
+  }
+  @include vp-374 {
+    margin-left: 0;
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
 
 .btn--detailed {
   border-color: $color-neon-blue;
   color: $color-neon-blue;
-  width: 180px;
-  margin-top: 30px;
+  max-width: 180px;
+  width: 100%;
+  margin-top: 10px;
+
+  @include vp-767 {
+    margin-top: 0;
+  }
+
+  @include vp-374 {
+    max-width: 160px;
+  }
 }
 
 .btn--question {
   background-color: $color-default-black;
-  width: 265px;
+  width: 100%;
+  max-width: 265px;
   margin-right: 50px;
   border: none;
-  padding: 15px 25px;
+  padding: 15px 0;
+
+  @include vp-374 {
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
 }
