--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -3,12 +3,26 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin-top: -17px;
+
+  @include vp-374 {
+    background-image: url("../../img/background-intro-mobile.png");
+  }
 }
 
 .container__intro {
   max-width: 720px;
   text-align: left;
+  margin: 0 auto;
   padding: 305px 0 280px;
+
+  @include vp-767 {
+    padding: 80px 50px 200px;
+    max-width: 100%;
+  }
+  @include vp-374 {
+    padding: 80px 25px 190px;
+  }
 }
 
 .intro__title {
@@ -21,6 +35,17 @@
   font-weight: 700;
   margin: 0;
   margin-bottom: 40px;
+
+  @include vp-767 {
+    font-size: 64px;
+    line-height: 75px;
+  }
+
+  @include vp-374 {
+    font-size: 36px;
+    line-height: 42px;
+    margin-bottom: 20px;
+  }
 }
 
 .intro__description {
@@ -30,4 +55,16 @@
   font-size: 22px;
   line-height: 34px;
   font-family: $ff-secondary;
+
+  @include vp-374 {
+    font-size: 14px;
+    line-height: 21px;
+    margin-bottom: 50px;
+  }
+}
+
+.optional-text {
+  @include vp-374 {
+    display: none;
+  }
 }
