--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -5,14 +5,14 @@
   padding: 30px 0 35px;
 
   @include vp-1439 {
-    padding: 0 32px;
+    padding: 20px 32px;
   }
 
   @include vp-1023 {
-    padding: 0 24px;
+    padding: 20px 24px;
   }
 
   @include vp-767 {
-    padding: 0 16px;
+    padding: 20px 16px;
   }
 }
