--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,8 +5,9 @@
 
 $color-default-black:               #041827;
 $color-default-white:               #f2f5f6;
-$color-transparent:                 rgba(255, 255, 255, 0);
-$color-default-background:            #f8fdff;
+$color-transparent:                   transparent;
+$color-transparent-white:            rgba(255, 255, 255, 0.7);
+$color-default-background:           #f8fdff;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
