--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,6 +5,7 @@
 .container__advantages {
   max-width: 1260px;
   padding: 120px 20px;
+  margin: 0 auto;
 
   @include vp-767 {
     padding: 80px 50px;
@@ -22,9 +23,6 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 30px;
 
-  @include vp-767 {
-    grid-template-columns: repeat(2, 320px);
-  }
   @include vp-374 {
     grid-template-columns: 1fr;
   }
@@ -34,7 +32,7 @@
   list-style-type: none;
   border: 1px solid #ebebeb;
   border-left: 5px solid $color-neon-blue;
-  padding: 40px 40px 0;
+  padding: 40px 40px 20px;
   min-height: 300px;
   box-sizing: border-box;
   cursor: pointer;
@@ -76,6 +74,7 @@
   line-height: 21px;
   margin: 0;
   font-weight: 400;
+
   @include vp-374 {
     font-size: 14px;
     line-height: 19px;
