--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -36,6 +36,7 @@
 
 .btn__title--mobile {
   display: none;
+
   @include vp-374 {
     display: inline-block;
   }
@@ -54,12 +55,14 @@
   letter-spacing: 0.05em;
   line-height: 21px;
   padding: 15px 0;
+  margin-bottom: 20px;
   max-width: 410px;
   width: 100%;
 
   @include vp-767 {
     margin-left: 40px;
   }
+
   @include vp-374 {
     margin-left: 0;
     font-size: 14px;
@@ -80,6 +83,7 @@
 
   @include vp-374 {
     max-width: 160px;
+    margin-top: 20px;
   }
 }
 
@@ -87,12 +91,6 @@
   background-color: $color-default-black;
   width: 100%;
   max-width: 265px;
-  margin-right: 50px;
   border: none;
   padding: 15px 0;
-
-  @include vp-374 {
-    margin-right: 0;
-    margin-bottom: 25px;
-  }
 }
