--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,5 +1,6 @@
 .feedback {
   background: url("../../img/bg-feedback-desktop.png") center / cover no-repeat;
+
   @include vp-767 {
     background: none;
   }
@@ -7,17 +8,39 @@
 
 .container__feedback {
   max-width: 1260px;
-  padding: 170px 20px 250px 50%;
+  margin: 0 auto;
+  padding: 170px 20px 230px 20px;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
   background: url("../../img/paper-airplane-desktop.png") center left / 510px 285px no-repeat;
 
   @include vp-767 {
     background: none;
     background-color: $color-neon-blue;
-    padding: 50px 50px 125px;
+    padding: 50px 50px 105px;
   }
 
   @include vp-374 {
-    padding: 50px 25px 90px;
+    padding: 50px 25px 70px;
+  }
+}
+
+.feedback__form-container {
+  min-width: 580px;
+  max-width: 50%;
+
+  @include vp-767 {
+    min-width: 100%;
+  }
+}
+
+.feedback__form {
+  margin-left: 5px;
+  max-width: 580px;
+
+  @include vp-767 {
+    margin-left: 0;
   }
 }
 
@@ -41,6 +64,7 @@
   color: $color-default-white;
   margin: 0;
   margin-bottom: 35px;
+
   @include vp-374 {
     font-size: 14px;
     line-height: 18px;
@@ -66,7 +90,7 @@
   }
 
   &--user-question {
-    margin-bottom: 35px;
+    padding-bottom: 35px;
   }
 }
 
@@ -98,18 +122,28 @@
   line-height: 21px;
   font-weight: 400;
   padding: 25px 15px;
+  max-width: 580px;
   width: 100%;
   min-height: 155px;
 }
 
 .feedback__footer {
-  display: flex;
+  display: grid;
+  grid-template-columns: 265px auto;
+  gap: 50px;
   align-items: center;
 
+  @include vp-767 {
+    grid-template-columns: 50% 50%;
+  }
+
   @include vp-374 {
-    flex-direction: column;
+    grid-template-columns: 100%;
+    gap: 25px;
   }
 }
+
+
 
 .checkbox__container input {
   cursor: pointer;
@@ -140,8 +174,8 @@
 .checkbox__checkmark {
   position: relative;
   display: block;
-  width: 100%;
-  max-width: 15px;
+  width: 15px;
+  min-width: 15px;
   height: 15px;
   box-sizing: border-box;
   background-color: $color-transparent;
