--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -4,20 +4,22 @@
 
 .container__footer {
   max-width: 1260px;
+  margin: 0 auto;
   padding: 50px 20px 55px;
   display: flex;
   justify-content: space-between;
 
-  @include vp-767  {
+  @include vp-767 {
     padding: 50px 50px 65px;
     display: grid;
     grid-template-areas:  "logo logo"
-                          "menu contacts";
+      "menu contacts";
   }
 
   @include vp-374 {
     display: flex;
     flex-direction: column;
+    padding: 15px 0 35px;
   }
 }
 
@@ -26,6 +28,7 @@
     grid-area: logo;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     margin-bottom: 35px;
   }
@@ -33,21 +36,40 @@
 
 .footer__section--menu {
   padding-right: 10px;
+
   @include vp-767 {
     grid-area: menu;
+  }
+
+  @include vp-374 {
+    padding-right: 0;
   }
 }
 
 .footer__section--contacts {
+  max-width: 320px;
+
   @include vp-767 {
     grid-area: contacts;
+  }
+
+  @include vp-374 {
+    max-width: none;
+  }
+}
+
+.footer__section {
+  @include vp-374 {
+    padding: 20px 25px;
+    margin: 0;
+    border-bottom: 1px solid $color-tansparent-grey;
   }
 }
 
 .footer__menu,
 .footer__contacts {
   padding: 0;
-  margin: 0;;
+  margin: 0;
 }
 
 .footer__menu {
@@ -80,6 +102,7 @@
 }
 
 .footer__title {
+  position: relative;
   font-family: $ff-main;
   color: $color-default-white;
   text-transform: uppercase;
@@ -89,6 +112,47 @@
   letter-spacing: 0.05em;
   margin: 0;
   margin-bottom: 20px;
+
+  &::after {
+    content: "";
+    display: none;
+    position: absolute;
+    width: 15px;
+    height: 1px;
+    background-color: #c4c4c4;
+    top: 8px;
+    right: 0;
+
+    @include vp-374 {
+      display: block;
+    }
+  }
+
+
+  &::before {
+    content: "";
+    display: none;
+    position: absolute;
+    width: 15px;
+    height: 1px;
+    background-color: #c4c4c4;
+    top: 8px;
+    right: 0;
+    transform: rotate(90deg);
+
+    @include vp-374 {
+      display: block;
+    }
+  }
+
+  @include vp-374 {
+    margin-bottom: 0;
+    cursor: pointer;
+  }
+}
+
+.accordion--active::before {
+  background-color: transparent;
 }
 
 .section__social {
@@ -107,11 +171,16 @@
 .section__logo-link {
   display: block;
   margin-bottom: 35px;
+
   @include vp-767 {
     margin-bottom: 0;
   }
 
   @include vp-374 {
-    margin-bottom: 20px;
+    margin: 0 0 20px 25px;
   }
+}
+
+.social__icon {
+  fill: $color-default-background;
 }
