--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,27 +1,42 @@
 .intro {
-  background-image: url("../../img/background-intro-desktop.png");
+  background-color: $color-default-black;
+  background-image: image-set(
+      url("../../img/background-intro-desktop.png") 1x,
+      url("../../img/background-intro-desktop@x2.png") 2x
+    );
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin-top: -17px;
 
+  @include vp-767 {
+    background-image: image-set(
+      url("../../img/background-intro-tablet.png") 1x,
+      url("../../img/background-intro-tablet@x2.png") 2x
+    );
+  }
+
   @include vp-374 {
-    background-image: url("../../img/background-intro-mobile.png");
+    background-image: image-set(
+      url("../../img/background-intro-mobile.png") 1x,
+      url("../../img/background-intro-mobile@x2.png") 2x
+    );
   }
 }
 
 .container__intro {
-  max-width: 720px;
+  max-width: 760px;
   text-align: left;
   margin: 0 auto;
-  padding: 305px 0 280px;
+  padding: 305px 20px 260px;
 
   @include vp-767 {
-    padding: 80px 50px 200px;
+    padding: 180px 50px 180px;
     max-width: 100%;
   }
+
   @include vp-374 {
-    padding: 80px 25px 190px;
+    padding: 150px 25px 170px;
   }
 }
 
