--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -75,13 +75,8 @@
     top: 20px;
     right: 20px;
     z-index: 1;
-    width: 40px;
-    height: 40px;
-    padding: 0;
+    padding: 10px;
     background-color: $color-transparent;
-    background-image: url("../../img/svg/popuap-close.svg");
-    background-repeat: no-repeat;
-    background-position: center;
     border: none;
     cursor: pointer;
   }
