--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,18 +6,19 @@
 $color-default-black:               #041827;
 $color-default-white:               #f2f5f6;
 $color-transparent:                   transparent;
-$color-transparent-white:            rgba(255, 255, 255, 0.7);
-$color-default-background:           #f8fdff;
+$color-transparent-white:           rgba(255, 255, 255, 0.7);
+$color-default-background:          #f8fdff;
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
-$color-neon-blue:                   #00b2ff;
+$color-neon-blue:                  #00b2ff;
+$color-tansparent-grey:             rgba(248, 253, 255, 0.7);
 $color-torch-red:                   #ff1553;
 
 // Gradient
 
-$black-to-bottom:                      linear-gradient( to bottom, $color-default-black 85%, rgba(4, 24, 39, 0) 100%);
+$black-to-bottom:                    linear-gradient(to bottom, $color-default-black 85%, rgba(4, 24, 39, 0) 100%);
 
 // Typography
 // ---------------------------------
