--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,19 +1,19 @@
 .feedback {
-  background: url("../../img/bg-feedback-desktop.png") center / cover no-repeat;
+  background: url("../img/bg-feedback-desktop.png") center / cover no-repeat;
 
   @include vp-767 {
     background: none;
   }
 }
 
-.container__feedback {
+.feedback__container {
   max-width: 1260px;
   margin: 0 auto;
   padding: 170px 20px 230px 20px;
   display: flex;
   justify-content: flex-end;
   flex-wrap: wrap;
-  background: url("../../img/paper-airplane-desktop.png") center left / 510px 285px no-repeat;
+  background: url("../img/paper-airplane-desktop.png") center left / 510px 285px no-repeat;
 
   @include vp-767 {
     background: none;
@@ -26,7 +26,7 @@
   }
 }
 
-.feedback__form-container {
+.feedback__form {
   min-width: 580px;
   max-width: 50%;
 
@@ -35,16 +35,7 @@
   }
 }
 
-.feedback__form {
-  margin-left: 5px;
-  max-width: 580px;
-
-  @include vp-767 {
-    margin-left: 0;
-  }
-}
-
-.feedback__title {
+.form__content h2 {
   font-family: $ff-main;
   color: $color-default-white;
   font-size: 36px;
@@ -60,7 +51,7 @@
   }
 }
 
-.feedback__description {
+.form__content p {
   color: $color-default-white;
   margin: 0;
   margin-bottom: 35px;
@@ -72,29 +63,28 @@
   }
 }
 
-.feedback__fieldset {
+.form__field {
+  margin: 0;
+  margin-left: 5px;
+  max-width: 580px;
   border: none;
   padding: 0;
-  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
 
-  &--user-data {
-    margin-bottom: 20px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
-
-    @include vp-374 {
-      grid-template-columns: 1fr;
-      gap: 20px;
-    }
+  @include vp-374 {
+    grid-template-columns: 1fr;
+    gap: 20px;
   }
 
-  &--user-question {
-    padding-bottom: 35px;
+  @include vp-767 {
+    margin-left: 0;
+    max-width: 100%;
   }
 }
 
-.feedback__fieldset input {
+.form__field input {
   background-color: rgba(4, 20, 39, 0.15);
   padding: 15px;
   border: none;
@@ -106,13 +96,18 @@
   width: 100%;
   max-width: 275px;
   border-radius: 3px;
+  margin-bottom: 20px;
+
+  &::placeholder {
+    color: #ffffff;
+  }
 
   @include vp-767 {
     max-width: 320px;
   }
 }
 
-.feedback__fieldset textarea {
+.form textarea {
   background-color: rgba(4, 20, 39, 0.15);
   border: none;
   border-radius: 3px;
@@ -125,16 +120,29 @@
   max-width: 580px;
   width: 100%;
   min-height: 155px;
+  margin-left: 5px;
+  margin-bottom: 35px;
+
+  &::placeholder {
+    color: #ffffff;
+  }
+
+  @include vp-767 {
+    margin-left: 0;
+    min-width: 100%;
+  }
 }
 
-.feedback__footer {
+.form__footer {
   display: grid;
   grid-template-columns: 265px auto;
   gap: 50px;
   align-items: center;
+  margin-left: 5px;
 
   @include vp-767 {
     grid-template-columns: 50% 50%;
+    margin-left: 0;
   }
 
   @include vp-374 {
@@ -143,9 +151,7 @@
   }
 }
 
-
-
-.checkbox__container input {
+.form__checkbox input {
   cursor: pointer;
   position: absolute;
   opacity: 0;
@@ -153,14 +159,14 @@
   width: 0;
 }
 
-.checkbox__label {
+.form__checkbox-label {
   position: relative;
   cursor: pointer;
   display: flex;
   align-items: center;
 }
 
-.checkbox__text {
+.form__checkbox-text {
   color: $color-default-white;
   font-size: 14px;
   line-height: 16px;
@@ -171,7 +177,7 @@
   }
 }
 
-.checkbox__checkmark {
+.form__checkbox-checkmark {
   position: relative;
   display: block;
   width: 15px;
@@ -184,7 +190,7 @@
   margin-right: 10px;
 }
 
-.checkbox__checkmark::after {
+.form__checkbox-checkmark::after {
   content: "";
   position: absolute;
   display: none;
@@ -192,12 +198,12 @@
   top: 3px;
   width: 8px;
   height: 5px;
-  background-image: url("../../img/svg/checkbox.svg");
+  background-image: url("../img/svg/checkbox.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 8px 5px;
 }
 
-.checkbox__label input:checked ~ .checkbox__checkmark::after {
+.form__checkbox-label input:checked ~ .form__checkbox-checkmark::after {
   display: block;
 }
