--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,8 +1,8 @@
 .intro {
   background-color: $color-default-black;
   background-image: image-set(
-      url("../../img/background-intro-desktop.png") 1x,
-      url("../../img/background-intro-desktop@x2.png") 2x
+      url("../img/background-intro-desktop.png") 1x,
+      url("../img/background-intro-desktop@x2.png") 2x
     );
   background-repeat: no-repeat;
   background-position: center;
@@ -11,20 +11,20 @@
 
   @include vp-767 {
     background-image: image-set(
-      url("../../img/background-intro-tablet.png") 1x,
-      url("../../img/background-intro-tablet@x2.png") 2x
+      url("../img/background-intro-tablet.png") 1x,
+      url("../img/background-intro-tablet@x2.png") 2x
     );
   }
 
   @include vp-374 {
     background-image: image-set(
-      url("../../img/background-intro-mobile.png") 1x,
-      url("../../img/background-intro-mobile@x2.png") 2x
+      url("../img/background-intro-mobile.png") 1x,
+      url("../img/background-intro-mobile@x2.png") 2x
     );
   }
 }
 
-.container__intro {
+.intro__container {
   max-width: 760px;
   text-align: left;
   margin: 0 auto;
@@ -40,7 +40,7 @@
   }
 }
 
-.intro__title {
+.intro h1 {
   color: $color-default-white;
   font-size: 80px;
   line-height: 94px;
@@ -63,7 +63,7 @@
   }
 }
 
-.intro__description {
+.intro p {
   color: $color-default-white;
   margin: 0;
   margin-bottom: 40px;
