--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -2,7 +2,7 @@
   background-color: $color-default-black;
 }
 
-.container__products {
+.products__container {
   padding: 70px 20px 120px;
   margin: 0 auto;
   max-width: 1260px;
@@ -16,7 +16,7 @@
   }
 }
 
-.products__title {
+.products h2 {
   color: $color-default-white;
   font-family: $ff-main;
   font-weight: 400;
@@ -69,6 +69,7 @@
   background-size: cover;
   padding: 50px 0 0 40px;
   min-height: 650px;
+  background-color: $color-neon-blue;
   cursor: pointer;
 
   &::before {
@@ -79,7 +80,7 @@
     width: 60px;
     height: 60px;
     background-color: $color-neon-blue;
-    background-image: url("../../img/svg/arrow.svg");
+    background-image: url("../img/svg/arrow.svg");
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 3px 0 0 0;
@@ -93,63 +94,63 @@
 
   &--production {
     background-image: image-set(
-      url("../../img/cart-1-desktop.png") 1x,
-      url("../../img/cart-1-desktop@x2.png") 2x
+      url("../img/cart-1-desktop.png") 1x,
+      url("../img/cart-1-desktop@x2.png") 2x
     );
 
     @include vp-767 {
       background-image: image-set(
-        url("../../img/cart-1-tablet.png") 1x,
-        url("../../img/cart-1-tablet@x2.png") 2x
+        url("../img/cart-1-tablet.png") 1x,
+        url("../img/cart-1-tablet@x2.png") 2x
       );
     }
 
     @include vp-374 {
       background-image: image-set(
-        url("../../img/cart-1-mobile.png") 1x,
-        url("../../img/cart-1-mobile@x2.png") 2x
+        url("../img/cart-1-mobile.png") 1x,
+        url("../img/cart-1-mobile@x2.png") 2x
       );
     }
   }
 
   &--montage {
     background-image: image-set(
-      url("../../img/cart-2-desktop.png") 1x,
-      url("../../img/cart-2-desktop@x2.png") 2x
+      url("../img/cart-2-desktop.png") 1x,
+      url("../img/cart-2-desktop@x2.png") 2x
     );
 
     @include vp-767 {
       background-image: image-set(
-      url("../../img/cart-2-tablet.png") 1x,
-      url("../../img/cart-2-tablet@x2.png") 2x
+      url("../img/cart-2-tablet.png") 1x,
+      url("../img/cart-2-tablet@x2.png") 2x
     );
     }
 
     @include vp-374 {
       background-image: image-set(
-      url("../../img/cart-2-mobile.png") 1x,
-      url("../../img/cart-2-mobile@x2.png") 2x
+      url("../img/cart-2-mobile.png") 1x,
+      url("../img/cart-2-mobile@x2.png") 2x
     );
     }
   }
 
   &--components {
     background-image: image-set(
-      url("../../img/cart-3-desktop.png") 1x,
-      url("../../img/cart-3-desktop@x2.png") 2x
+      url("../img/cart-3-desktop.png") 1x,
+      url("../img/cart-3-desktop@x2.png") 2x
     );
 
     @include vp-767 {
       background-image: image-set(
-      url("../../img/cart-3-tablet.png") 1x,
-      url("../../img/cart-3-tablet@x2.png") 2x
+      url("../img/cart-3-tablet.png") 1x,
+      url("../img/cart-3-tablet@x2.png") 2x
     );
     }
 
     @include vp-374 {
       background-image: image-set(
-      url("../../img/cart-3-mobile.png") 1x,
-      url("../../img/cart-3-mobile@x2.png") 2x
+      url("../img/cart-3-mobile.png") 1x,
+      url("../img/cart-3-mobile@x2.png") 2x
     );
     }
   }
@@ -166,7 +167,7 @@
   }
 }
 
-.link__title {
+.products h3 {
   color: $color-default-white;
   font-family: $ff-main;
   font-weight: 400;
