--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -30,3 +30,14 @@
     url("../fonts/roboto-condensed-bold.woff2") format("woff2"),
     url("../fonts/fonts/roboto-condensed-bold.woff") format("woff");
 }
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "PT Mono";
+
+  font-display: swap;
+  src:
+    url("../fonts/pt-mono-regular") format("woff2"),
+    url("../fonts/fonts/pt-mono-regular.woff") format("woff");
+}
