--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,14 +18,14 @@
 // ---------------------------------
 
 @import "blocks/btn";
-@import "blocks/modal";
 @import "blocks/header";
 @import "blocks/intro";
 @import "blocks/advantages";
 @import "blocks/about";
 @import "blocks/products";
 @import "blocks/feedback";
-@import "blocks/footer"
+@import "blocks/footer";
+@import "blocks/modal";
 
 // ---------------------------------
 
