--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -10,11 +10,11 @@
   background-repeat: no-repeat;
   background-position: 40px top;
 
-  @include vp-767 {
+  @include vp-1023 {
     padding: 0 50px 80px 225px;
   }
 
-  @include vp-374 {
+  @include vp-767 {
     background: none;
     padding: 0 25px 80px;
   }
@@ -27,7 +27,7 @@
   font-weight: 400;
   margin: 0;
 
-  @include vp-374 {
+  @include vp-767 {
     font-size: 28px;
     line-height: 39px;
   }
@@ -39,12 +39,13 @@
   line-height: 21px;
   margin: 20px 0;
 
-  @include vp-374 {
+  @include vp-767 {
     font-size: 14px;
     line-height: 18px;
   }
 }
 
-.about__extra-text {
+.hide-text {
   display: none;
 }
+
