--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -29,6 +29,12 @@
 }
 
 .btn--popup {
+  @include vp-1023 {
+    display: none;
+  }
+}
+
+.btn__title {
   @include vp-767 {
     display: none;
   }
@@ -37,14 +43,8 @@
 .btn__title--mobile {
   display: none;
 
-  @include vp-374 {
+  @include vp-767 {
     display: inline-block;
-  }
-}
-
-.btn__title {
-  @include vp-374 {
-    display: none;
   }
 }
 
@@ -59,11 +59,12 @@
   max-width: 410px;
   width: 100%;
 
-  @include vp-767 {
+  @include vp-1023 {
     margin-left: 40px;
   }
 
-  @include vp-374 {
+  @include vp-767 {
+    max-width: none;
     margin-left: 0;
     font-size: 14px;
     line-height: 16px;
@@ -77,11 +78,11 @@
   width: 100%;
   margin-top: 10px;
 
-  @include vp-767 {
+  @include vp-1023 {
     margin-top: 0;
   }
 
-  @include vp-374 {
+  @include vp-767 {
     max-width: 160px;
     margin-top: 20px;
   }
@@ -93,4 +94,8 @@
   max-width: 265px;
   border: none;
   padding: 15px 0;
+
+  @include vp-767 {
+    max-width: none;
+  }
 }
