--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -38,6 +38,6 @@
 
   font-display: swap;
   src:
-    url("../fonts/pt-mono-regular") format("woff2"),
+    url("../fonts/pt-mono-regular.woff2") format("woff2"),
     url("../fonts/fonts/pt-mono-regular.woff") format("woff");
 }
