--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -30,7 +30,7 @@ $fz-default:                        16px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 $ff-main:                           "Roboto Condensed", "Arial", sans-serif;
-$ff-secondary:                      "PT Mono", "Arial", sans-serif;
+$ff-secondary:                      "PT Mono", "Courier New", monospace;
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
 
 // Animation
