--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -37,7 +37,11 @@
   font-family: $ff-secondary;
   font-size: 16px;
   line-height: 21px;
-  margin: 20px 0;
+  margin: 0;
+
+  &:not(:nth-of-type(2)) {
+    margin-bottom: 20px;
+  }
 
   @include vp-767 {
     font-size: 14px;
@@ -45,7 +49,12 @@
   }
 }
 
-.hide-text {
+.about__text-mobile {
   display: none;
 }
 
+.about__text-tablet {
+  @include vp-767 {
+    display: none;
+  }
+}
