--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -17,7 +17,7 @@
   font-display: swap;
   src:
     url("../fonts/roboto-condensed-regular.woff2") format("woff2"),
-    url("../fonts/fonts/roboto-condensed-regular.woff") format("woff");
+    url("../fonts/roboto-condensed-regular.woff") format("woff");
 }
 
 @font-face {
@@ -28,7 +28,7 @@
   font-display: swap;
   src:
     url("../fonts/roboto-condensed-bold.woff2") format("woff2"),
-    url("../fonts/fonts/roboto-condensed-bold.woff") format("woff");
+    url("../fonts/roboto-condensed-bold.woff") format("woff");
 }
 
 @font-face {
@@ -39,5 +39,5 @@
   font-display: swap;
   src:
     url("../fonts/pt-mono-regular.woff2") format("woff2"),
-    url("../fonts/fonts/pt-mono-regular.woff") format("woff");
+    url("../fonts/pt-mono-regular.woff") format("woff");
 }
