--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/feedback";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/form";
 
 // ---------------------------------
 
