поправил название изобр логотипа и аккордеон для футера

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -12,7 +12,8 @@
   @include vp-1023 {
     padding: 50px 50px 55px;
     display: grid;
-    grid-template-areas:  "logo logo"
+    grid-template-areas:
+      "logo logo"
       "menu contacts";
   }
 
@@ -166,6 +167,12 @@
 
   @include vp-767 {
     margin: 0 auto;
+  }
+}
+
+.footer__list--acc {
+  @include vp-767 {
+    display: none;
   }
 }
 
