--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -34,22 +34,30 @@
   border-left: 5px solid $color-neon-blue;
   padding: 40px 40px 20px;
   min-height: 300px;
+  height: 100%;
   box-sizing: border-box;
   cursor: pointer;
 
   @include vp-1023 {
-    padding: 40px 40px 35px;
+    padding: 34px 40px 0;
+    min-height: 360px;
   }
 
   @include vp-767 {
-    min-height: 325px;
-    padding: 30px;
+    min-height: 340px;
+    padding: 30px 25px 10px;
   }
 }
 
 .advantages__icon {
-  margin-bottom: 20px;
+  margin-bottom: 13px;
   fill: $color-neon-blue;
+
+  @include vp-767 {
+    margin-bottom: 10px;
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .advantages__item h3 {
@@ -58,7 +66,7 @@
   font-size: 24px;
   line-height: 34px;
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 13px;
   font-weight: 400;
 
   @include vp-767 {
