--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -9,20 +9,20 @@
 .feedback__container {
   max-width: 1260px;
   margin: 0 auto;
-  padding: 170px 20px 230px 20px;
+  padding: 165px 20px 250px 20px;
   display: flex;
   justify-content: flex-end;
   flex-wrap: wrap;
-  background: url("../img/paper-airplane-desktop.png") center left / 510px 285px no-repeat;
+  background: url("../img/paper-airplane-desktop.png") top 245px left 20px / 510px 285px no-repeat;
 
   @include vp-1023 {
     background: none;
     background-color: $color-neon-blue;
-    padding: 50px 50px 105px;
+    padding: 45px 50px 127px;
   }
 
   @include vp-767 {
-    padding: 50px 25px 70px;
+    padding: 50px 25px 85px;
   }
 }
 
