--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -7,7 +7,6 @@
   margin: 0 auto;
   padding: 50px 20px 55px;
   display: flex;
-  justify-content: space-between;
 
   @include vp-1023 {
     padding: 50px 50px 55px;
@@ -25,21 +24,26 @@
 }
 
 .footer__section--logo {
+  margin-right: 160px;
+
   @include vp-1023 {
     grid-area: logo;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 35px;
+    margin-right: 0;
+    margin-bottom: 30px;
   }
 }
 
 .footer__section--menu {
-  padding-right: 10px;
-
+  width: 395px;
+  margin-right: 100px;
   @include vp-1023 {
     grid-area: menu;
+    width: auto;
+    margin-right: 150px;
   }
 
   @include vp-767 {
@@ -48,7 +52,6 @@
 }
 
 .footer__section--contacts {
-  max-width: 320px;
 
   @include vp-1023 {
     grid-area: contacts;
@@ -86,7 +89,7 @@
 
 .footer__item {
   list-style-type: none;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
 }
 
 .footer__link {
@@ -109,6 +112,7 @@
   line-height: 16px;
   letter-spacing: 0.05em;
   margin: 0;
+  padding-top: 10px;
   margin-bottom: 20px;
 
   &::after {
@@ -144,7 +148,8 @@
 
   @include vp-767 {
     margin-bottom: 0;
-    padding-bottom: 20px;
+    padding-top: 0;
+    padding-bottom: 25px;
     cursor: pointer;
   }
 }
@@ -153,20 +158,18 @@
   display: none;
 }
 
-.footer__link--show {
-  @include vp-767 {
-    display: block;
-  }
-}
-
 .footer__list--social {
-  margin-left: 10px;
+  margin-left: 15px;
   display: flex;
-  width: 150px;
+  width: 140px;
   justify-content: space-between;
 
+  @include vp-1023 {
+    margin-left: auto;
+  }
+
   @include vp-767 {
-    margin: 0 auto;
+    margin: 0 auto 23px;
   }
 }
 
