--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,35 +1,49 @@
+.form {
+  padding-left: 18px;
+
+  @include vp-1023 {
+    padding: 0;
+  }
+}
 
 .form__content h2 {
   font-family: $ff-main;
   color: $color-default-white;
   font-size: 36px;
   font-weight: 400;
-  line-height: 50px;
+  line-height: 51px;
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 12px;
+
+  @include vp-1023 {
+    margin-bottom: 5px;
+  }
 
   @include vp-767 {
     font-size: 30px;
     line-height: 42px;
-    margin-bottom: 20px;
+    margin-bottom: 8px;
   }
 }
 
 .form__content p {
   color: $color-default-white;
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 32px;
+
+  @include vp-1023 {
+    margin-bottom: 25px;
+  }
 
   @include vp-767 {
     font-size: 14px;
     line-height: 18px;
-    margin-bottom: 40px;
+    margin-bottom: 35px;
   }
 }
 
 .form__field {
   margin: 0;
-  margin-left: 5px;
   max-width: 580px;
   border: none;
   padding: 0;
@@ -94,8 +108,7 @@
   max-width: 580px;
   width: 100%;
   min-height: 155px;
-  margin-left: 5px;
-  margin-bottom: 35px;
+  margin-bottom: 30px;
 
   &::placeholder {
     color: #ffffff;
@@ -105,6 +118,10 @@
     margin-left: 0;
     min-width: 100%;
   }
+
+  @include vp-767 {
+    margin-bottom: 50px;
+  }
 }
 
 .form__footer {
@@ -112,7 +129,6 @@
   grid-template-columns: 265px auto;
   gap: 50px;
   align-items: center;
-  margin-left: 5px;
 
   &--modal {
     display: flex;
@@ -130,6 +146,10 @@
     grid-template-columns: 100%;
     gap: 25px;
   }
+}
+
+.form__checkbox {
+  align-self: end;
 }
 
 .form__checkbox input {
@@ -189,17 +209,17 @@
   display: block;
 }
 
-.form h2 {
+.form__content--modal h2 {
   font-size: 30px;
   line-height: 42px;
 }
 
-.form p {
+.form__content--modal p {
   font-size: 16px;
   margin-bottom: 40px;
 }
 
-.form--modal textarea {
+.form__content--modal textarea {
   margin-left: 0;
   margin-bottom: 25px;
 }
