--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,8 +4,7 @@
   margin: 0 auto;
   padding: 30px 20px 35px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
 
   @include vp-1023 {
@@ -14,7 +13,7 @@
   }
 
   @include vp-767 {
-    padding: 10px 35px 20px;
+    padding: 10px 35px 20px 25px;
   }
 }
 
@@ -50,12 +49,28 @@
 
   &--logo {
     padding: 0;
+    margin-right: 150px;
+
+    @include vp-767 {
+      margin-top: 5px;
+      margin-right: 0;
+    }
   }
 
   &--post {
+    margin-right: 100px;
+
     @include vp-1023 {
       margin-right: 20px;
       margin-left: auto;
+    }
+  }
+
+  &--tel {
+    margin-right: 155px;
+
+    @include vp-1023 {
+      margin-right: 0;
     }
   }
 
