--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -25,18 +25,18 @@
 }
 
 .intro__container {
-  max-width: 760px;
+  max-width: 1260px;
   text-align: left;
   margin: 0 auto;
-  padding: 305px 20px 260px;
+  padding: 320px 20px 260px 145px;
 
   @include vp-1023 {
-    padding: 180px 50px 185px;
+    padding: 192px 50px 185px;
     max-width: 100%;
   }
 
   @include vp-767 {
-    padding: 150px 25px 170px;
+    padding: 165px 25px 170px;
   }
 }
 
@@ -49,31 +49,37 @@
   font-family: $ff-main;
   font-weight: 700;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
 
   @include vp-1023 {
     font-size: 64px;
     line-height: 75px;
+    margin-bottom: 0;
   }
 
   @include vp-767 {
     font-size: 36px;
     line-height: 42px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 }
 
 .intro p {
   color: $color-default-white;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 46px;
+  max-width: 650px;
   font-size: 22px;
   line-height: 34px;
   font-family: $ff-secondary;
 
+  @include vp-1023 {
+    margin-bottom: 58px;
+  }
+
   @include vp-767 {
     font-size: 14px;
     line-height: 21px;
-    margin-bottom: 50px;
+    margin-bottom: 45px;
   }
 }
