--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -3,12 +3,12 @@
 }
 
 .products__container {
-  padding: 70px 20px 120px;
+  padding: 66px 20px 120px;
   margin: 0 auto;
   max-width: 1260px;
 
   @include vp-1023 {
-    padding: 60px 50px 55px;
+    padding: 55px 50px 55px;
   }
 
   @include vp-767 {
@@ -23,7 +23,11 @@
   font-size: 36px;
   line-height: 50px;
   margin: 0;
-  margin-bottom: 50px;
+  margin-bottom: 55px;
+
+  @include vp-1023 {
+    margin-bottom: 40px;
+  }
 
   @include vp-767 {
     display: none;
@@ -41,7 +45,7 @@
       line-height: 39px;
       padding-right: 10px;
       margin: 0;
-      margin-bottom: 40px;
+      margin-bottom: 23px;
     }
   }
 }
@@ -68,7 +72,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 50px 0 0 40px;
+  padding: 46px 0 0 40px;
   min-height: 650px;
   background-color: $color-neon-blue;
   cursor: pointer;
@@ -164,6 +168,7 @@
 
   @include vp-767 {
     padding: 30px;
+    padding-top: 27px;
     min-height: 250px;
   }
 }
