--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -32,7 +32,7 @@
 .btn--popup {
   width: 160px;
   text-align: center;
-  margin-top: 6px;
+  margin-right: 60px;
 
   @include vp-1023 {
     display: none;
@@ -57,7 +57,8 @@
   background-color: $color-neon-blue;
   border: none;
   font-size: 18px;
-  height: 55px;
+  min-height: 55px;
+  height: 100%;
   line-height: 21px;
   padding: 15px 0;
   margin-bottom: 20px;
