--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,7 +4,8 @@
   margin: 0 auto;
   padding: 30px 20px 35px;
   display: flex;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
 
   @include vp-1023 {
@@ -28,6 +29,25 @@
   }
 }
 
+.header__wrapper--contact {
+  max-width: 470px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  @include vp-1023 {
+    margin-left: auto;
+    justify-content: flex-end;
+  }
+}
+
+.header__wrapper--btn {
+  display: grid;
+  grid-template-columns: auto;
+  row-gap: 10px;
+}
+
 .header__logo-picture {
   @include vp-1023 {
     width: 215px;
@@ -44,12 +64,13 @@
   color: $color-default-white;
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 5px;
   cursor: pointer;
 
   &--logo {
     padding: 0;
-    margin-right: 150px;
+    margin-right: 20px;
+    cursor: default;
 
     @include vp-767 {
       margin-top: 5px;
@@ -58,17 +79,12 @@
   }
 
   &--post {
-    margin-right: 100px;
-
     @include vp-1023 {
       margin-right: 20px;
-      margin-left: auto;
     }
   }
 
   &--tel {
-    margin-right: 155px;
-
     @include vp-1023 {
       margin-right: 0;
     }
