--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -77,6 +77,10 @@
   background-color: $color-neon-blue;
   cursor: pointer;
 
+  @include hover {
+    filter: brightness(0.5);
+  }
+
   &::before {
     content: "";
     position: absolute;
