--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -48,6 +48,11 @@
   }
 }
 
+.advantages__item:nth-child(3),
+.advantages__item:nth-child(4) {
+  min-height: 325px;
+}
+
 .advantages__icon {
   margin-bottom: 13px;
   fill: $color-neon-blue;
@@ -71,6 +76,7 @@
   @include vp-767 {
     font-size: 20px;
     line-height: 28px;
+    margin-bottom: 10px;
   }
 }
 
