--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -73,7 +73,9 @@
     max-width: none;
     margin-left: 0;
     font-size: 14px;
-    height: 40px;
+    min-height: auto;
+    max-height: 40px;
+    height: 100%;
     line-height: 16px;
   }
 }
