--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -10,7 +10,7 @@
   max-width: 1260px;
   margin: 0 auto;
   display: flex;
-  padding: 170px 20px 250px;
+  padding: 165px 20px 250px;
 
    @include vp-1023 {
     background-color: $color-neon-blue;
@@ -18,7 +18,7 @@
   }
 
   @include vp-767 {
-    padding: 50px 25px 85px;
+    padding: 50px 25px 90px;
   }
 }
 
@@ -28,7 +28,7 @@
   background-image: url("../img/paper-airplane-desktop.png");
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center;
+  background-position: center top 80px;
 
   @include vp-1023 {
     display: none;
