--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -6,8 +6,11 @@
 .footer__container {
   max-width: 1260px;
   margin: 0 auto;
-  padding: 50px 20px 55px;
+  padding: 55px 20px 55px;
   display: flex;
+  justify-content: space-between;
+  min-height: 280px;
+
 
   @include vp-1023 {
     padding: 50px 50px 55px;
@@ -25,9 +28,10 @@
 }
 
 .footer__section--logo {
-  margin-right: 160px;
+  margin-right: 130px;
 
   @include vp-1023 {
+    width: 100%;
     grid-area: logo;
     display: flex;
     justify-content: space-between;
@@ -39,13 +43,12 @@
 }
 
 .footer__section--menu {
-  margin-right: 100px;
   width: 470px;
 
   @include vp-1023 {
     grid-area: menu;
-    width: auto;
-    margin-right: 150px;
+    width: 220px;
+    margin-right: 130px;
   }
 
   @include vp-767 {
@@ -54,6 +57,8 @@
 }
 
 .footer__section--contacts {
+  max-width: 345px;
+  width: 100%;
 
   @include vp-1023 {
     grid-area: contacts;
@@ -77,9 +82,24 @@
   margin: 0;
 }
 
+.footer__list--social {
+  margin-left: 15px;
+  display: flex;
+  width: 140px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  @include vp-1023 {
+    margin-right: 25px;
+  }
+
+  @include vp-767 {
+    margin: 0 auto 23px;
+  }
+}
+
 .footer__list--menu {
-  display: grid;
-  grid-template-columns: repeat(2, 220px);
+  column-count: 2;
 
   @include vp-1023 {
     display: flex;
@@ -87,11 +107,34 @@
   }
 }
 
+.footer__input {
+  width: 0;
+  height: 0;
+  appearance: none;
+  position: absolute;
+}
+
+.footer__list--menu,
+.footer__list--contacts {
+  margin-top: 20px;
+  @include vp-767 {
+    display: none;
+  }
+}
+
+.footer__input:checked ~ .footer__list {
+  display: block;
+}
+
 .footer__item {
   list-style-type: none;
   margin-bottom: 7px;
   max-width: 220px;
   width: 100%;
+}
+
+.footer__list--contacts .footer__item {
+  min-width: 345px;
 }
 
 .footer__link {
@@ -116,7 +159,7 @@
   }
 }
 
-.footer__section h2 {
+.footer__title {
   position: relative;
   font-family: $ff-main;
   color: $color-default-white;
@@ -127,7 +170,6 @@
   letter-spacing: 0.05em;
   margin: 0;
   padding-top: 10px;
-  margin-bottom: 20px;
 
   &::after {
     content: "";
@@ -164,28 +206,14 @@
     margin-bottom: 0;
     padding-top: 0;
     padding-bottom: 25px;
+    display: block;
+    width: 100%;
     cursor: pointer;
   }
 }
 
-.footer__section .footer__title--acc::before {
+.footer__input:checked ~ .footer__title::before {
   display: none;
-}
-
-.footer__list--social {
-  margin-left: 15px;
-  display: flex;
-  width: 140px;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-
-  @include vp-1023 {
-    margin-left: auto;
-  }
-
-  @include vp-767 {
-    margin: 0 auto 23px;
-  }
 }
 
 .footer__social-item:not(:nth-child(3n)) {
