--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -38,7 +38,14 @@
 
   @include vp-1023 {
     margin-left: auto;
+    margin-top: 5px;
+    max-width: 270px;
+    align-self: flex-start;
     justify-content: flex-end;
+  }
+
+  @include vp-767 {
+    max-width: 200px;
   }
 }
 
@@ -86,7 +93,7 @@
 
   &--tel {
     @include vp-1023 {
-      margin-right: 0;
+      margin-right: 10px;
     }
   }
 
