добавляет визуальн валид на поля ввода

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -99,6 +99,10 @@
   }
 }
 
+// .form__field input:invalid {
+//   outline: 1px solid red;
+// }
+
 .form__field--modal input {
   max-width: 100%;
 }
